--- a/pom.xml
+++ b/pom.xml
@@ -63,4 +63,12 @@
         </plugins>
     </build>
 
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub OWNER Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/lamphdev/common</url>
+        </repository>
+    </distributionManagement>
+
 </project>
